--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRM Project</title>
     <meta name="description" content="A simple CRM project" />
-    <link rel="icon" href="./public/favicon/favicon.ico" />
+    <link rel="icon" href="/favicon/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
